--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,31 @@
     margin-bottom: 20px;
 }
 
+/* #showdata {
+    display:grid;
+    grid-template-columns: max-content max-content;
+    grid-gap:5px;
+}
+
+#showdata label {
+    text-align:right
+}
+
+#showdata labe::after {
+    content: ":"; 
+} */
+
+#showdata label
+{
+   display: inline;
+   float: left;
+   text-align: left;
+   width: 3.2em;
+   /* margin-left: 6em; */
+   margin-right: 1em;
+   margin-top: 0.4em;
+}
+
 .image-area {
     border: 2px dashed rgba(255, 255, 255, 0.7);
     padding: 1rem;
